--- a/main.html
+++ b/main.html
@@ -1,14 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nested Tables</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th, td {
+      border: 1px solid black;
+      text-align: center;
+      padding: 8px;
+    }
+    .nested-table {
+      width: 100%;
+      border: 1px solid black;
+    }
+    .nested-table th {
+      background-color: #f4f4f4;
+    }
+    .black-cell {
+      background-color: black;
+      color: white;
+    }
+    .purple-link {
+      color: purple;
+      text-decoration: none;
+    }
+    .purple-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <table>
+    <tr>
+      <td>
+        <table class="nested-table">
+          <thead>
+            <tr>
+              <th colspan="2">Nested Table 2</th>
+            </tr>
+            <tr>
+              <th>Column 1</th>
+              <th>Column 2</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table class="nested-table">
+          <thead>
+            <tr>
+              <th>Nested Table 1</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <ul>
+                  <li>List item 1</li>
+                  <li>List item 2</li>
+                  <li>List item 3</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <table class="nested-table">
+          <thead>
+            <tr>
+              <th colspan="2">Nested Table 3</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="#" class="purple-link">Nested Table</a></td>
+              <td>Demo Continued</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+      <td>
+        <table class="nested-table">
+          <thead>
+            <tr>
+              <th>Nested Table 4</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="black-cell">HTML</td>
+            </tr>
+          </tbody>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
 </html>
